removed incomplete problem 15 solution

--- a/teaching/coms_w3137/notes/huffman_codes_and_midterm.textile
+++ b/teaching/coms_w3137/notes/huffman_codes_and_midterm.textile
@@ -428,7 +428,7 @@ Tree:      A
 
 
 
-<a name="p14" href="#p14" onclick="toggle_visibility('p13div1');">14 - Click to show</a>
+<a name="p14" href="#p14" onclick="toggle_visibility('p14div1');">14 - Click to show</a>
 
 <div id="p14div1" class="hints">
 
@@ -474,7 +474,8 @@ public int balanceHeightTest(Node n)
 
 
 
-<a name="p15" href="#p15" onclick="toggle_visibility('p15div1');">15 - Click to show</a>
+<!--<a name="p15" href="#p15" onclick="toggle_visibility('p15div1');">15 - Click to show</a>-->
+* 15 - This problem will be covered on Tuesday
 
 <div id="p15div1" class="hints">
 
