--- a/teaching/coms_w3137/notes/huffman_codes_and_midterm.textile
+++ b/teaching/coms_w3137/notes/huffman_codes_and_midterm.textile
@@ -428,7 +428,7 @@ Tree:      A
 
 
 
-<a name="p14" href="#p14" onclick="toggle_visibility('p13div1');">14 - Click to show</a>
+<a name="p14" href="#p14" onclick="toggle_visibility('p14div1');">14 - Click to show</a>
 
 <div id="p14div1" class="hints">
 
@@ -458,13 +458,17 @@ public int balanceHeightTest(Node n)
      return -1;
 
   // Do post order traversal  
-  int leftBalanced = balanceHeightTest(n.left);
-  int rightBalanced = balanceHeightTest(n.right);
+  int leftHeight = balanceHeightTest(n.left);
+  int rightHeight = balanceHeightTest(n.right);
   // check if either is unbalanced. If they are, propogate up. 
-  if (n.left == -2 || n.right == -2)
+  if (leftHeight == -2 || rightHeight == -2)
+     return -2;
+
+  // if the current tree is unbalanced, return unbalanced
+  if (abs(leftHeight - rightHeight) > 1)
      return -2;
   
-  // otherwise return true;     
+  // otherwise return height     
   return max(leftBalanced, rightBalanced) + 1;
 }
 
