added some papers

--- a/papers/index.textile
+++ b/papers/index.textile
@@ -4,9 +4,15 @@ layout: page
 author: jon_weisz_columbia
 ---
 
+* Jonathan Weisz, Yipeng Huang, Florian Lier, Simha Sethumadhavan, Peter Allen,  "Towards Sustainable Robotics System Benchmarking":http://jonweisz.com/papers_files/robobench_icra_v6.pdf (Preprint) , ICRA 2016.
+
+* Jacob Varley, Jonathan Weisz, Jared Weiss, Peter K. Allen, "Generating multi-fingered robotic grasps via deep learning":http://www.clic.cs.columbia.edu/~allen/PAPERS/iros15_grasp_varley.pdf, IEEE/RSJ International Conference on Robots and Systems (IROS), Nov. 2015. 
+
+* Robert Ying, Jonathan Weisz, Peter K. Allen, "Grasping with your brain: a brain-computer interface for fast grasp selection":http://www.clic.cs.columbia.edu/~allen/PAPERS/isrr_2015.pdf , 17th International Symposium on Robotics Research (ISRR) September 12-15, 2015. 
+
 * Jonathan Weisz, "Assistive Robotic Grasping":http://jonweisz.com/papers_files/jw_thesis.pdf , Thesis, 2015. 
 
-* Jonathan Weisz, Alexander G. Barszap, Sanjay S. Joshi, and Peter K. Allen, "Single Muscle Site sEMG Interface for Assistive Grasping":http://www.cs.columbia.edu/~allen/PAPERS/bci_iros14.pdf , IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) September 14-18, 2014. Chicago. Video
+* Jonathan Weisz, Alexander G. Barszap, Sanjay S. Joshi, and Peter K. Allen, "Single Muscle Site sEMG Interface for Assistive Grasping":http://www.cs.columbia.edu/~allen/PAPERS/bci_iros14.pdf , IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) September 14-18, 2014. Chicago.
 
 * Youngbum Jun, Jonathan Weisz, Christopher Rasmussen, Peter Allen and Paul Oh, "Real-Time Teleop with Non-Prehensile Manipulation":http://www.cs.columbia.edu/~allen/PAPERS/tepra14.pdf , IEEE International Conference on Technologies for Practical Robot Applications (TePRA), April 14 -15, 2014
 
